--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.10.2
+======
+* Fixed critical crasher after closing windows
+* Updated translations:
+  kn    (Shankar Prasad)
+  zh_CN (Wylmer Wang)
+
 3.10.1
 ======
 * Updated GSettings install rule, #697815
