Updated Hebrew translation

--- a/po/he.po
+++ b/po/he.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.he\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-06-18 01:46+0300\n"
-"PO-Revision-Date: 2014-06-18 01:48+0300\n"
+"POT-Creation-Date: 2014-06-18 01:55+0300\n"
+"PO-Revision-Date: 2014-06-18 01:55+0300\n"
 "Last-Translator: Yosef Or Boczko <yoseforb@gmail.com>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "Language: he\n"
@@ -161,8 +161,8 @@ msgid "Whether the location entry can be used as a search field"
 msgstr "האם רשומת המיקום יכולה לשמש כשדה חיפוש"
 
 #: ../libyelp/yelp-location-entry.c:438
-msgid "Search..."
-msgstr "חיפוש..."
+msgid "Search…"
+msgstr "חיפוש…"
 
 #: ../libyelp/yelp-location-entry.c:781
 msgid "Clear the search text"
@@ -350,20 +350,20 @@ msgid "Open Link in New _Window"
 msgstr "פתיחת קישור בחלון _חדש"
 
 #: ../libyelp/yelp-view.c:1388
-msgid "_Save Image As..."
-msgstr "שמירת ת_מונה בשם..."
+msgid "_Save Image As…"
+msgstr "שמירת ת_מונה בשם…"
 
 #: ../libyelp/yelp-view.c:1390
-msgid "_Save Video As..."
-msgstr "שמירת ו_ידאו בשם..."
+msgid "_Save Video As…"
+msgstr "שמירת ו_ידאו בשם…"
 
 #: ../libyelp/yelp-view.c:1397
-msgid "S_end Image To..."
-msgstr "שליחת _תמונה אל..."
+msgid "S_end Image To…"
+msgstr "שליחת _תמונה אל…"
 
 #: ../libyelp/yelp-view.c:1399
-msgid "S_end Video To..."
-msgstr "שליחת _וידאו אל..."
+msgid "S_end Video To…"
+msgstr "שליחת _וידאו אל…"
 
 #: ../libyelp/yelp-view.c:1410
 msgid "_Copy Text"
@@ -374,8 +374,8 @@ msgid "C_opy Code Block"
 msgstr "ה_עתקת מקטע קוד"
 
 #: ../libyelp/yelp-view.c:1428
-msgid "Save Code _Block As..."
-msgstr "שמירת מקטע הקוד _בשם..."
+msgid "Save Code _Block As…"
+msgstr "שמירת מקטע הקוד _בשם…"
 
 #: ../libyelp/yelp-view.c:1535
 #, c-format
@@ -469,12 +469,12 @@ msgid "Menu"
 msgstr "תפריט"
 
 #: ../src/yelp-window.c:351
-msgid "Find..."
-msgstr "חיפוש..."
+msgid "Find…"
+msgstr "חיפוש…"
 
 #: ../src/yelp-window.c:352
-msgid "Print..."
-msgstr "הדפסה..."
+msgid "Print…"
+msgstr "הדפסה…"
 
 #: ../src/yelp-window.c:357
 msgid "Previous Page"
@@ -511,6 +511,9 @@ msgstr "קבל עזרה עם GNOME"
 #: ../yelp.desktop.in.in.h:3
 msgid "documentation;information;manual;"
 msgstr "תיעוד;פרטים;מידע;מדריך;"
+
+#~ msgid "Find..."
+#~ msgstr "חיפוש..."
 
 #~ msgid "Increase the size of the text"
 #~ msgstr "מגדיל את גודל הטקסט"
