--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+3.13.3
+======
+* Complete redesign to fit with new GNOME 3 apps
+* Updated color computing code to avoid deprecations
+* Updated translations:
+  cs    (Marek Černocký)
+  es    (Daniel Mustieles)
+  he    (Yosef Or Boczko)
+  id    (Dirgita)
+  lt    (Aurimas Černius)
+  pt_BR (Rafael Ferreira)
+  ru    (Yuri Myasoedov)
+  sl    (Matej Urbančič)
+  sv    (Anders Jonsson)
+
 3.12.0
 ======
 * Stable release. No changes since 3.11.91
