--- a/po/ru.po
+++ b/po/ru.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&keywords=I18N+L10N&component=General\n"
-"POT-Creation-Date: 2014-06-24 10:57+0000\n"
-"PO-Revision-Date: 2014-06-24 17:09+0400\n"
+"POT-Creation-Date: 2014-07-05 10:59+0000\n"
+"PO-Revision-Date: 2014-07-05 23:39+0400\n"
 "Last-Translator: Yuri Myasoedov <ymyasoedov@yandex.ru>\n"
 "Language-Team: русский <gnome-cyr@gnome.org>\n"
 "Language: ru\n"
@@ -20,8 +20,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
-"X-Generator: Gtranslator 2.91.6\n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Poedit 1.6.5\n"
 
 #. (itstool) path: msg/msgstr
 #. ID: install.tooltip
@@ -328,22 +328,18 @@ msgid "Open Link in New _Window"
 msgstr "Открыть ссылку в _новом окне"
 
 #: ../libyelp/yelp-view.c:1388
-#| msgid "_Save Image As..."
 msgid "_Save Image As…"
 msgstr "_Сохранить изображение как…"
 
 #: ../libyelp/yelp-view.c:1390
-#| msgid "_Save Video As..."
 msgid "_Save Video As…"
 msgstr "_Сохранить видео как…"
 
 #: ../libyelp/yelp-view.c:1397
-#| msgid "S_end Image To..."
 msgid "S_end Image To…"
 msgstr "О_тправить изображение…"
 
 #: ../libyelp/yelp-view.c:1399
-#| msgid "S_end Video To..."
 msgid "S_end Video To…"
 msgstr "О_тправить видео…"
 
@@ -356,7 +352,6 @@ msgid "C_opy Code Block"
 msgstr "_Копировать блок кода"
 
 #: ../libyelp/yelp-view.c:1428
-#| msgid "Save Code _Block As..."
 msgid "Save Code _Block As…"
 msgstr "Сохранить _блок кода как…"
 
@@ -420,17 +415,14 @@ msgid "Help"
 msgstr "Справка"
 
 #: ../src/yelp-application.c:322
-#| msgid "_New Window"
 msgid "New Window"
 msgstr "Создать окно"
 
 #: ../src/yelp-application.c:326
-#| msgid "_Larger Text"
 msgid "Larger Text"
 msgstr "Увеличить текст"
 
 #: ../src/yelp-application.c:327
-#| msgid "_Smaller Text"
 msgid "Smaller Text"
 msgstr "Уменьшить текст"
 
@@ -443,12 +435,10 @@ msgid "A YelpApplication instance that controls this window"
 msgstr "Экземпляр YelpApplication, управляющий этим окном"
 
 #: ../src/yelp-window.c:323
-#| msgid "_Back"
 msgid "Back"
 msgstr "Назад"
 
 #: ../src/yelp-window.c:330
-#| msgid "_Forward"
 msgid "Forward"
 msgstr "Вперёд"
 
@@ -457,7 +447,6 @@ msgid "Menu"
 msgstr "Меню"
 
 #: ../src/yelp-window.c:349
-#| msgid "Find:"
 msgid "Find…"
 msgstr "Найти…"
 
@@ -466,37 +455,31 @@ msgid "Print…"
 msgstr "Печать…"
 
 #: ../src/yelp-window.c:355
-#| msgid "_Previous Page"
 msgid "Previous Page"
 msgstr "Предыдущая страница"
 
 #: ../src/yelp-window.c:356
-#| msgid "_Next Page"
 msgid "Next Page"
 msgstr "Следующая страница"
 
 #: ../src/yelp-window.c:361
-#, fuzzy
 #| msgid "Help"
 msgid "All Help"
-msgstr "Вся справка"
+msgstr "Вся справочная документация"
 
 #: ../src/yelp-window.c:383
 msgid "Search (Ctrl+S)"
 msgstr "Найти (Ctrl+S)"
 
 #: ../src/yelp-window.c:417
-#| msgid "Bookmarks"
 msgid "No bookmarks"
 msgstr "Нет закладок"
 
 #: ../src/yelp-window.c:425
-#| msgid "_Add Bookmark"
 msgid "Add Bookmark"
 msgstr "Добавить закладку"
 
 #: ../src/yelp-window.c:431
-#| msgid "_Remove Bookmark"
 msgid "Remove Bookmark"
 msgstr "Удалить закладку"
 
