--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+3.13.90
+=======
+* Use new symbolic menu item
+* Updated translations:
+  as    (Nilamdyuti Goswami)
+  ca    (Gil Forcada)
+  ca@valencia (Carles Ferrando)
+  de    (Benjamin Steinwender)
+  gd    (GunChleoc)
+  el    (Tom Tryfonidis)
+  eu    (Iñaki Larrañaga Murgoitio)
+  fi    (Lasse Liehu)
+  gl    (Fran Diéguez)
+  hu    (Balázs Úr)
+  nb    (Åka Sikrom)
+  ru    (Yuri Myasoedov)
+  zh_CN (irisgyq)
+  zh_HK (Chao-Hsiung Liao)
+  zh_TW (Chao-Hsiung Liao)
+
 3.13.3
 ======
 * Complete redesign to fit with new GNOME 3 apps
