--- a/po/fi.po
+++ b/po/fi.po
@@ -8,30 +8,30 @@
 # Note http://mail.gnome.org/archives/gnome-i18n/2004-August/msg00032.html that
 # recommends the quotation marks be written explicitly, not as entities.
 # Gnome 2012-03 Finnish translation sprint participants:
-# Jiri Grönroos
 # Henri Mannerberg <email-not@available.invalid>, 2002-2003.
 # Lauri Nurmi <lanurmi@iki.fi>, 2003, 2004.
 # Pauli Virtanen <pauli.virtanen@hut.fi>, 2004-2005.
 # Ilkka Tuohela <hile@iki.fi>, 2005-2009.
 # Tommi Vainikainen <thv@iki.fi>, 2009-2011.
 # Timo Jyrinki <timo.jyrinki@iki.fi>, 2011.
-# Jiri Grönroos <jiri.gronroos@iki.fi>, 2012, 2013.
 # Lasse Liehu <lasse.liehu@gmail.com>, 2014.
+# Jiri Grönroos <jiri.gronroos+l10n@iki.fi>, 2012, 2013, 2014.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug."
-"cgi?product=yelp&keywords=I18N+L10N&component=General\n"
-"POT-Creation-Date: 2014-08-08 22:56+0000\n"
-"PO-Revision-Date: 2014-08-09 13:15+0300\n"
-"Last-Translator: Lasse Liehu <lasse.liehu@gmail.com>\n"
-"Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=yelp&keywords=I18N+L10N&component=General\n"
+"POT-Creation-Date: 2014-09-06 10:57+0000\n"
+"PO-Revision-Date: 2014-09-06 14:01+0300\n"
+"Last-Translator: Jiri Grönroos <jiri.gronroos+l10n@iki.fi>\n"
+"Language-Team: suomi <gnome-fi-laatu@lists.sourceforge.net>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.5\n"
+"X-Generator: Gtranslator 2.91.6\n"
 "X-POT-Import-Date: 2012-03-05 14:44:08+0000\n"
 
 #. (itstool) path: msg/msgstr
@@ -165,7 +165,7 @@ msgstr "Näytä"
 msgid "A YelpView instance to control"
 msgstr "YelpView-instanssi hallittavaksi"
 
-#: ../libyelp/yelp-search-entry.c:189 ../src/yelp-window.c:400
+#: ../libyelp/yelp-search-entry.c:189 ../src/yelp-window.c:397
 msgid "Bookmarks"
 msgstr "Kirjanmerkit"
 
@@ -337,25 +337,21 @@ msgid "Open Link in New _Window"
 msgstr "Avaa linkki uudessa _ikkunassa"
 
 #: ../libyelp/yelp-view.c:1388
-#, fuzzy
 #| msgid "_Save Image As..."
 msgid "_Save Image As…"
 msgstr "_Tallenna kuva nimellä…"
 
 #: ../libyelp/yelp-view.c:1390
-#, fuzzy
 #| msgid "_Save Video As..."
 msgid "_Save Video As…"
 msgstr "_Tallenna video nimellä…"
 
 #: ../libyelp/yelp-view.c:1397
-#, fuzzy
 #| msgid "S_end Image To..."
 msgid "S_end Image To…"
 msgstr "Läh_etä kuva…"
 
 #: ../libyelp/yelp-view.c:1399
-#, fuzzy
 #| msgid "S_end Video To..."
 msgid "S_end Video To…"
 msgstr "Läh_etä video…"
@@ -369,7 +365,6 @@ msgid "C_opy Code Block"
 msgstr "K_opioi koodilohko"
 
 #: ../libyelp/yelp-view.c:1428
-#, fuzzy
 #| msgid "Save Code _Block As..."
 msgid "Save Code _Block As…"
 msgstr "Tallenna koodi_lohko nimellä…"
@@ -428,28 +423,25 @@ msgstr "URI ”%s” ei jäsenny."
 msgid "Turn on editor mode"
 msgstr "Vaihda editoritilaan"
 
-#: ../src/yelp-application.c:272 ../src/yelp-window.c:1147
+#: ../src/yelp-application.c:272 ../src/yelp-window.c:1144
 #: ../yelp.desktop.in.in.h:1
 msgid "Help"
 msgstr "Ohje"
 
 #: ../src/yelp-application.c:322
-#, fuzzy
 #| msgid "_New Window"
 msgid "New Window"
-msgstr "_Uusi ikkuna"
+msgstr "Uusi ikkuna"
 
 #: ../src/yelp-application.c:326
-#, fuzzy
 #| msgid "_Larger Text"
 msgid "Larger Text"
-msgstr "_Suurenna tekstiä"
+msgstr "Suurenna tekstiä"
 
 #: ../src/yelp-application.c:327
-#, fuzzy
 #| msgid "_Smaller Text"
 msgid "Smaller Text"
-msgstr "_Pienennä tekstiä"
+msgstr "Pienennä tekstiä"
 
 #: ../src/yelp-window.c:206
 msgid "Application"
@@ -460,70 +452,61 @@ msgid "A YelpApplication instance that controls this window"
 msgstr "YelpApplication-instanssi joka hallitsee tätä ikkunaa"
 
 #: ../src/yelp-window.c:323
-#, fuzzy
 #| msgid "_Back"
 msgid "Back"
-msgstr "E_dellinen"
+msgstr "Edellinen"
 
 #: ../src/yelp-window.c:330
-#, fuzzy
 #| msgid "_Forward"
 msgid "Forward"
-msgstr "S_euraava"
+msgstr "Seuraava"
 
-#: ../src/yelp-window.c:344
+#: ../src/yelp-window.c:341
 msgid "Menu"
-msgstr ""
+msgstr "Valikko"
 
-#: ../src/yelp-window.c:349
-#, fuzzy
+#: ../src/yelp-window.c:346
 #| msgid "Find:"
 msgid "Find…"
-msgstr "Etsi:"
+msgstr "Etsi…"
 
-#: ../src/yelp-window.c:350
+#: ../src/yelp-window.c:347
 msgid "Print…"
-msgstr ""
+msgstr "Tulosta…"
 
-#: ../src/yelp-window.c:355
-#, fuzzy
+#: ../src/yelp-window.c:352
 #| msgid "_Previous Page"
 msgid "Previous Page"
-msgstr "E_dellinen sivu"
+msgstr "Edellinen sivu"
 
-#: ../src/yelp-window.c:356
-#, fuzzy
+#: ../src/yelp-window.c:353
 #| msgid "_Next Page"
 msgid "Next Page"
-msgstr "_Seuraava sivu"
+msgstr "Seuraava sivu"
 
-#: ../src/yelp-window.c:361
-#, fuzzy
+#: ../src/yelp-window.c:358
 #| msgid "Help"
 msgid "All Help"
-msgstr "Ohje"
+msgstr "Koko ohje"
 
-#: ../src/yelp-window.c:383
+#: ../src/yelp-window.c:380
 msgid "Search (Ctrl+S)"
-msgstr ""
+msgstr "Etsi (Ctrl+S)"
 
-#: ../src/yelp-window.c:417
-#, fuzzy
+#: ../src/yelp-window.c:414
 #| msgid "Bookmarks"
 msgid "No bookmarks"
-msgstr "Kirjanmerkit"
+msgstr "Ei kirjanmerkkejä"
 
-#: ../src/yelp-window.c:425
-#, fuzzy
+#: ../src/yelp-window.c:422
 #| msgid "_Add Bookmark"
 msgid "Add Bookmark"
-msgstr "_Lisää kirjanmerkki"
+msgstr "Lisää kirjanmerkki"
 
-#: ../src/yelp-window.c:431
-#, fuzzy
+#: ../src/yelp-window.c:428
 #| msgid "_Remove Bookmark"
 msgid "Remove Bookmark"
-msgstr "_Poista kirjanmerkki"
+msgstr "Poista kirjanmerkki"
 
 #: ../yelp.desktop.in.in.h:2
 msgid "Get help with GNOME"
