--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+3.13.92
+=======
+* Fixed crash on searching, #736312 (Marcos Chavarría Teijeiro)
+* Style the find revealer, #736408 (David King)
+* Updated translations:
+  da    (Kenneth Nielsen)
+  de    (Benjamin Steinwender)
+  fi    (Ville-Pekka Vainio)
+  fr    (Alexandre Franke)
+  gu    (Sweta Kothari)
+  id    (Andika Triwidada)
+  ko    (Changwoo Ryu)
+  sk    (Dušan Kazik)
+  sv    (Mattias Eriksson)
+  ta    (Shantha kumar)
+
 3.13.90
 =======
 * Use new symbolic menu item
