--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+3.14.0
+======
+* Updated translations:
+  bn_IN (Saibal Ray)
+  hi    (Rajesh Ranjan)
+  ja    (Jiro Matsuzawa)
+  kn    (Shankar Prasad)
+  mr    (Sandeep Sheshrao Shedmake)
+  ne    (Pawan Chitrakar)
+  or    (Manoj Kumar Giri)
+  pa    (A S Alam)
+  pl    (Paweł Żołnowski)
+  sr    (Мирослав Николић)
+
 3.13.92
 =======
 * Fixed crash on searching, #736312 (Marcos Chavarría Teijeiro)
