--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+3.14.1
+======
+* Updated translations:
+  bg    (Ivaylo Valkov)
+  bn_IN (Saibal Ray)
+  fa    (Arash Mousavi)
+  it    (Milo Casagrande)
+  lv    (Rūdolfs Mazurs)
+  te    (Krishnababu Krothapalli)
+  uk    (Daniel Korostil)
+
 3.14.0
 ======
 * Updated translations:
