--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+3.15.91
+=======
+* Update AX_COMPILER_FLAGS from autoconf-archive (David King)
+* Use GtkSettings 'gtk-xft-dpi' property to keep track of Xft DPI changes
+  (Mario Sanchez Prada)
+
 3.15.90
 =======
 * Use a default filename when priting to a file, #737206 (David King)
