Fix broken Bosnian translation

--- a/po/bs.po
+++ b/po/bs.po
@@ -477,4 +477,4 @@ msgstr "Dobavite pomoć s GNOME"
 
 #: ../yelp.desktop.in.in.h:3
 msgid "documentation;information;manual;"
-msgstr "dokumentacja;informacija;priručnik"
+msgstr "dokumentacja;informacija;priručnik;"
