--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+3.16.0
+======
+* Avoid recursive activation, #745407 (Matthias Clasen)
+* Updated translations:
+  bs    (Samir Ribic)
+  kk    (Baurzhan Muftakhidinov)
+  tg    (Victor Ibragimov)
+
 3.15.91
 =======
 * Update AX_COMPILER_FLAGS from autoconf-archive (David King)
