--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+3.16.1
+======
+* Updated translations:
+  is    (Sveinn í Felli)
+
 3.16.0
 ======
 * Avoid recursive activation, #745407 (Matthias Clasen)
