--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+3.14.2
+======
+* Updated translations:
+  he    (Yosef Or Boczko)
+  is    (Sveinn í Felli)
+  nl    (hanniedu)
+  pt    (Pedro Albuquerque)
+  tr    (Muhammet Kara, Yaşar Şentürk)
+  vi    (Trần Ngọc Quân)
+
 3.14.1
 ======
 * Updated translations:
