--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.17.2
+======
+* Support for platform conditional tokens from os-release (Shaun McCance)
+* Updated translations:
+  is    (Sveinn í Felli)
+  oc    (Cédric Valmary)
+
 3.16.0
 ======
 * Avoid recursive activation, #745407 (Matthias Clasen)
