--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+3.17.3
+======
+* Port to WebKit2 API, #686376 (Marcos Chavarría Teijeiro, Carlos Garcia
+  Campos, David King)
+* Use a header bar as a toolbar in Unity, #749903 (Iain Lane)
+
 3.17.2
 ======
 * Support for platform conditional tokens from os-release (Shaun McCance)
