--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+3.17.4
+======
+* Use the correct baclground color, #749947 (Lars Uebernickel)
+* Updated translations:
+  es    (Daniel Mustieles)
+  he    (Yosef Or Boczko)
+  hu    (Balázs Úr)
+  pt    (Pedro Albuquerque)
+  ru    (Stas Solovey)
+  sk    (Dušan Kazik)
+  sl    (Matej Urbančič)
+  tg    (Victor Ibragimov)
+
 3.17.3
 ======
 * Port to WebKit2 API, #686376 (Marcos Chavarría Teijeiro, Carlos Garcia
