--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,21 @@
+3.17.90
+=======
+* Fix page title changes when going backward and forward, #753448 (Carlos
+  Garcia Campos)
+* Improve subtitle to only be shown when it differs from the page title,
+  #753444 (Michael Catanzaro)
+* Fix startup activation, #753084 (Cosimo Cecchi)
+* Updated translations:
+  cs    (Marek Černocký)
+  fr    (Alexandre Franke)
+  fur   (Fabio Tomat)
+  gl    (Fran Dieguez)
+  nb    (Kjartan Maraas)
+  sv    (Anders Jonsson)
+
 3.17.4
 ======
-* Use the correct baclground color, #749947 (Lars Uebernickel)
+* Use the correct background color, #749947 (Lars Uebernickel)
 * Updated translations:
   es    (Daniel Mustieles)
   he    (Yosef Or Boczko)
