--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+3.17.91
+=======
+* Use XDG_CURRENT_DESKTOP, when available, to set platform conditionals (Shaun
+  McCance)
+* Fix crash after page title change bugfix (Shaun McCance)
+* Updated translations:
+  el    (Tom Tryfonidis)
+  id    (Andika Triwidada)
+  pl    (Piotr Drąg)
+  tr    (Muhammet Kara)
+  zh_TW (Chao-Hsiung Liao)
+
 3.17.90
 =======
 * Fix page title changes when going backward and forward, #753448 (Carlos
