--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,19 @@
+3.18.0
+======
+* Fix accessibility regression for caret navigation, #754912 (Carlos Garcia Campos)
+* Updated translations:
+  da    (Ask Hjorth Larsen)
+  de    (Simon Linden)
+  fa    (Arash Mousavi)
+  fi    (Jiri Grönroos)
+  it    (Milo Casagrande)
+  ja    (Jiro Matsuzawa)
+  kk    (Baurzhan Muftakhidinov)
+  ko    (Changwoo Ryu)
+  lt    (Aurimas Černius)
+  lv    (Rūdolfs Mazurs)
+  pt_BR (Enrico Nicoletto)
+
 3.17.91
 =======
 * Use XDG_CURRENT_DESKTOP, when available, to set platform conditionals (Shaun
