--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+3.18.1
+======
+* Updated translations:
+  el       (Tom Tryfonidis)
+  sr       (Милош Поповић)
+  sr@latin (Милош Поповић)
+  vi       (Trần Ngọc Quân)
+
 3.18.0
 ======
 * Fix accessibility regression for caret navigation, #754912 (Carlos Garcia Campos)
