--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+3.19.1
+======
+* Simplify build system and avoid private yelpcommon library, #756654 (David
+  King)
+* Hide several internal symbols, #756658 (David King)
+* Updated translations:
+  eu       (Inaki Larranaga Murgoitio)
+
 3.18.1
 ======
 * Updated translations:
