Us ... instead of …  for zh_CN

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -446,11 +446,11 @@ msgstr "菜单"
 
 #: ../src/yelp-window.c:366
 msgid "Find…"
-msgstr "查找…"
+msgstr "查找..."
 
 #: ../src/yelp-window.c:367
 msgid "Print…"
-msgstr "打印…"
+msgstr "打印..."
 
 #: ../src/yelp-window.c:372
 msgid "Previous Page"
