Update Aragonese translation

--- a/po/an.po
+++ b/po/an.po
@@ -6,10 +6,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp master\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug."
-"cgi?product=yelp&keywords=I18N+L10N&component=General\n"
-"POT-Creation-Date: 2015-11-19 15:05+0000\n"
-"PO-Revision-Date: 2015-11-19 20:34+0200\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=yelp&keywords=I18N+L10N&component=General\n"
+"POT-Creation-Date: 2015-12-27 17:26+0000\n"
+"PO-Revision-Date: 2015-11-19 20:35+0200\n"
 "Last-Translator: Daniel <entaltoaragon@gmail.com>\n"
 "Language-Team: Aragonese <softaragones@googlegroups.com>\n"
 "Language: an\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.1.1\n"
-"X-POOTLE-MTIME: 1447961641.000000\n"
+"X-POOTLE-MTIME: 1447961706.000000\n"
 
 #. (itstool) path: msg/msgstr
 #. ID: install.tooltip
@@ -333,8 +333,7 @@ msgid "The URI ‘%s’ could not be parsed."
 msgstr "No se podió analisar l'URI ‘%s’."
 
 #: ../libyelp/yelp-view.c:842
-#, fuzzy, c-format
-#| msgid "Unknown Error"
+#, c-format
 msgid "Unknown Error."
 msgstr "Error desconoixida."
 
