--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+3.19.91
+=======
+* Fallback to help-list: if no other help is available, #759545 (Aleksander
+  Morgado)
+* Fix warnings in GtkStyleContext usage, #761577 (Michael Catanzaro)
+
 3.19.90
 =======
 * Partial fix for handling documents using local paths, #753443 (Carlos Garcia Campos)
