--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.20.0
+======
+* Updated translations:
+  ca    (Gil Forcada)
+  da    (Ask Hjorth Larsen)
+  uk    (Daniel Korostil)
+
 3.19.91
 =======
 * Fallback to help-list: if no other help is available, #759545 (Aleksander
