--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.20.1
+======
+* Updated translations:
+  ar    (Khaled Hosny)
+  fur   (Fabio Tomat)
+  oc    (Cédric Valmary)
+
 3.20.0
 ======
 * Updated translations:
