--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+3.21.3
+======
+
+* Build system improvements (Michael Catanzaro, Sam Spilsbury, Emmaneuele
+  Bassi)
+* Compiler warning fix (Cosimo Cecchi)
+* Updated translations:
+  gd    (GunChleoc)
+  oc    (Cédric Valmary)
+  pt    (Sérgio Cardeira)
+
 3.20.1
 ======
 * Updated translations:
