--- a/po/bn.po
+++ b/po/bn.po
@@ -17,6 +17,7 @@ msgstr ""
 "PO-Revision-Date: 2009-09-02 11:42+0700\n"
 "Last-Translator: Israt Jahan <israt@ankur.org.bd>\n"
 "Language-Team: Bengali <ankur-bd-l10n@googlegroups.com>\n"
+"Language: bn\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
