--- a/po/br.po
+++ b/po/br.po
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2009-08-24 11:38+0100\n"
 "Last-Translator: Denis <denisarnuad@yahoo.fr>\n"
 "Language-Team: Britton\n"
+"Language: br\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
