--- a/po/cy.po
+++ b/po/cy.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2007-05-17 22:51-0000\n"
 "Last-Translator: Rhys Jones <rhys@sucs.org>\n"
 "Language-Team: Welsh <gnome-cy@pengwyn.linux.org.uk>\n"
+"Language: cy\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
