--- a/po/de.po
+++ b/po/de.po
@@ -19,7 +19,7 @@ msgstr ""
 "PO-Revision-Date: 2015-09-02 19:51+0200\n"
 "Last-Translator: Simon Linden <xhi2018@googlemail.com>\n"
 "Language-Team: Deutsch <gnome-de@gnome.org>\n"
-"Language: de_DE\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
