--- a/po/fr.po
+++ b/po/fr.po
@@ -29,7 +29,7 @@ msgstr ""
 "PO-Revision-Date: 2015-08-15 13:41+0200\n"
 "Last-Translator: Alain Lojewski <allomervan@gmail.com>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
-"Language: \n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8 bits\n"
