--- a/po/ku.po
+++ b/po/ku.po
@@ -14,6 +14,7 @@ msgstr ""
 "PO-Revision-Date: 2007-03-04 23:56+0100\n"
 "Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
 "Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
+"Language: ku\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
