--- a/po/mn.po
+++ b/po/mn.po
@@ -15,6 +15,7 @@ msgstr ""
 "PO-Revision-Date: 2004-02-20 21:29+0100\n"
 "Last-Translator: Sanlig Badral <badral@openmn.org>\n"
 "Language-Team: Mongolian <openmn-core@lists.sf.net>\n"
+"Language: mn\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
