--- a/po/nds.po
+++ b/po/nds.po
@@ -26,6 +26,7 @@ msgstr ""
 "PO-Revision-Date: 2004-02-09 17:14+0100\n"
 "Last-Translator: Kenneth Christiansen <kenneth@gnu.org>\n"
 "Language-Team: Low Saxon NFE (Northern Frisian Enclave) <kenneth@gnu.org>\n"
+"Language: nds\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
