--- a/po/ps.po
+++ b/po/ps.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2009-02-07 16:14+0500\n"
 "Last-Translator: Zabeeh Khan <zabeehkhan@gmail.com>\n"
 "Language-Team: Pashto <pathanisation@googlegroups.com>\n"
+"Language: ps\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
