--- a/po/sr.po
+++ b/po/sr.po
@@ -1,32 +1,27 @@
 # Serbian translation of yelp
-# Courtesy of Prevod.org team (http://prevod.org/) -- 2003—2014.
+# Courtesy of Prevod.org team (http://prevod.org/) -- 2003—2016.
 # This file is distributed under the same license as the yelp package.
-# Maintainer: Горан Ракић <gox@devbase.net>
-# Reviewed on 2004-03-20 by: Слободан Д. Средојевић <slobo@akrep.be>
-# Reviewed on 2005-03-06 by: Данило Шеган <danilo@gnome.org>
-# Reviewed on 2005-07-24 by: Слободан Д. Средојевић <slobo@akrep.be>
-# Reviewed on 2011-02-06 by: Мирослав Николић <miroslavnikolic@rocketmail.com>
-# Данило Шеган <danilo@gnome.org>, 2011.
-# Мирослав Николић <miroslavnikolic@rocketmail.com>, 2011—2014.
+# Горан Ракић <gox@devbase.net>
+# Слободан Д. Средојевић <slobo@akrep.be>,  2004—2005
+# Данило Шеган <danilo@gnome.org>, 2005—2011.
+# Мирослав Николић <miroslavnikolic@rocketmail.com>, 2011—2016.
 # Милош Поповић <gpopac@gmail.com>, 2015.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
-"product=yelp&keywords=I18N+L10N&component=General\n"
-"POT-Creation-Date: 2015-09-22 01:00+0000\n"
-"PO-Revision-Date: 2015-09-22 12:04+0200\n"
-"Last-Translator: Милош Поповић <gpopac@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=yelp&ke"
+"ywords=I18N+L10N&component=General\n"
+"POT-Creation-Date: 2016-08-19 16:59+0000\n"
+"PO-Revision-Date: 2016-08-28 11:40+0200\n"
+"Last-Translator: Мирослав Николић <miroslavnikolic@rocketmail.com>\n"
 "Language-Team: српски <gnome-sr@googlegroups.org>\n"
 "Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=n==1? 3 : n%10==1 && n%100!=11 ? 0 : n"
-"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1? 3 : n%10==1 && n%100!=11 ? 0 : "
+"n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Project-Style: gnome\n"
-"X-Generator: Gtranslator 2.91.6\n"
 
 #. (itstool) path: msg/msgstr
 #. ID: install.tooltip
@@ -115,17 +110,17 @@ msgstr "Адреса документа"
 msgid "The URI which identifies the document"
 msgstr "Адреса која одређује документ"
 
-#: ../libyelp/yelp-document.c:1022
+#: ../libyelp/yelp-document.c:1024
 #, c-format
 msgid "Search results for “%s”"
 msgstr "Резултати претраге за „%s“"
 
-#: ../libyelp/yelp-document.c:1034
+#: ../libyelp/yelp-document.c:1036
 #, c-format
 msgid "No matching help pages found in “%s”."
 msgstr "Нисам пронашао одговарајућу страницу помоћи у „%s“."
 
-#: ../libyelp/yelp-document.c:1040
+#: ../libyelp/yelp-document.c:1042
 msgid "No matching help pages found."
 msgstr "Нисам пронашао одговарајућу страницу помоћи."
 
@@ -346,7 +341,6 @@ msgstr "Адреса „%s“ не може бити анализирана."
 
 #: ../libyelp/yelp-view.c:842
 #, c-format
-#| msgid "Unknown Error"
 msgid "Unknown Error."
 msgstr "Непозната грешка."
 
@@ -419,20 +413,20 @@ msgstr "Тражи у осталој документацији."
 msgid "Turn on editor mode"
 msgstr "Укључи режим уређивача"
 
-#: ../src/yelp-application.c:270 ../src/yelp-window.c:1180
+#: ../src/yelp-application.c:271 ../src/yelp-window.c:1180
 #: ../src/yelp-window.c:1188 ../yelp.desktop.in.in.h:1
 msgid "Help"
 msgstr "Помоћ"
 
-#: ../src/yelp-application.c:320
+#: ../src/yelp-application.c:321
 msgid "New Window"
 msgstr "Нови прозор"
 
-#: ../src/yelp-application.c:324
+#: ../src/yelp-application.c:325
 msgid "Larger Text"
 msgstr "Већи текст"
 
-#: ../src/yelp-application.c:325
+#: ../src/yelp-application.c:326
 msgid "Smaller Text"
 msgstr "Мањи текст"
 
@@ -498,8 +492,9 @@ msgid "Get help with GNOME"
 msgstr "Потражите Гномову помоћ"
 
 #: ../yelp.desktop.in.in.h:3
-msgid "documentation;information;manual;"
-msgstr "документација;подаци;упутство;"
+#| msgid "documentation;information;manual;"
+msgid "documentation;information;manual;help;"
+msgstr "документација;подаци;упутство;помоћ;"
 
 #~ msgid "See all search results for “%s”"
 #~ msgstr "Погледај све резултате претраге за „%s“"
