--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -1,32 +1,27 @@
 # Serbian translation of yelp
-# Courtesy of Prevod.org team (http://prevod.org/) -- 2003—2014.
+# Courtesy of Prevod.org team (http://prevod.org/) -- 2003—2016.
 # This file is distributed under the same license as the yelp package.
-# Maintainer: Goran Rakić <gox@devbase.net>
-# Reviewed on 2004-03-20 by: Slobodan D. Sredojević <slobo@akrep.be>
-# Reviewed on 2005-03-06 by: Danilo Šegan <danilo@gnome.org>
-# Reviewed on 2005-07-24 by: Slobodan D. Sredojević <slobo@akrep.be>
-# Reviewed on 2011-02-06 by: Miroslav Nikolić <miroslavnikolic@rocketmail.com>
-# Danilo Šegan <danilo@gnome.org>, 2011.
-# Miroslav Nikolić <miroslavnikolic@rocketmail.com>, 2011—2014.
+# Goran Rakić <gox@devbase.net>
+# Slobodan D. Sredojević <slobo@akrep.be>,  2004—2005
+# Danilo Šegan <danilo@gnome.org>, 2005—2011.
+# Miroslav Nikolić <miroslavnikolic@rocketmail.com>, 2011—2016.
 # Miloš Popović <gpopac@gmail.com>, 2015.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
-"product=yelp&keywords=I18N+L10N&component=General\n"
-"POT-Creation-Date: 2015-09-22 01:00+0000\n"
-"PO-Revision-Date: 2015-09-22 12:04+0200\n"
-"Last-Translator: Miloš Popović <gpopac@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=yelp&ke"
+"ywords=I18N+L10N&component=General\n"
+"POT-Creation-Date: 2016-08-19 16:59+0000\n"
+"PO-Revision-Date: 2016-08-28 11:40+0200\n"
+"Last-Translator: Miroslav Nikolić <miroslavnikolic@rocketmail.com>\n"
 "Language-Team: srpski <gnome-sr@googlegroups.org>\n"
-"Language: sr@latin\n"
+"Language: sr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=n==1? 3 : n%10==1 && n%100!=11 ? 0 : n"
-"%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=n==1? 3 : n%10==1 && n%100!=11 ? 0 : "
+"n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
 "X-Project-Style: gnome\n"
-"X-Generator: Gtranslator 2.91.6\n"
 
 #. (itstool) path: msg/msgstr
 #. ID: install.tooltip
@@ -115,17 +110,17 @@ msgstr "Adresa dokumenta"
 msgid "The URI which identifies the document"
 msgstr "Adresa koja određuje dokument"
 
-#: ../libyelp/yelp-document.c:1022
+#: ../libyelp/yelp-document.c:1024
 #, c-format
 msgid "Search results for “%s”"
 msgstr "Rezultati pretrage za „%s“"
 
-#: ../libyelp/yelp-document.c:1034
+#: ../libyelp/yelp-document.c:1036
 #, c-format
 msgid "No matching help pages found in “%s”."
 msgstr "Nisam pronašao odgovarajuću stranicu pomoći u „%s“."
 
-#: ../libyelp/yelp-document.c:1040
+#: ../libyelp/yelp-document.c:1042
 msgid "No matching help pages found."
 msgstr "Nisam pronašao odgovarajuću stranicu pomoći."
 
@@ -346,7 +341,6 @@ msgstr "Adresa „%s“ ne može biti analizirana."
 
 #: ../libyelp/yelp-view.c:842
 #, c-format
-#| msgid "Unknown Error"
 msgid "Unknown Error."
 msgstr "Nepoznata greška."
 
@@ -419,20 +413,20 @@ msgstr "Traži u ostaloj dokumentaciji."
 msgid "Turn on editor mode"
 msgstr "Uključi režim uređivača"
 
-#: ../src/yelp-application.c:270 ../src/yelp-window.c:1180
+#: ../src/yelp-application.c:271 ../src/yelp-window.c:1180
 #: ../src/yelp-window.c:1188 ../yelp.desktop.in.in.h:1
 msgid "Help"
 msgstr "Pomoć"
 
-#: ../src/yelp-application.c:320
+#: ../src/yelp-application.c:321
 msgid "New Window"
 msgstr "Novi prozor"
 
-#: ../src/yelp-application.c:324
+#: ../src/yelp-application.c:325
 msgid "Larger Text"
 msgstr "Veći tekst"
 
-#: ../src/yelp-application.c:325
+#: ../src/yelp-application.c:326
 msgid "Smaller Text"
 msgstr "Manji tekst"
 
@@ -498,8 +492,9 @@ msgid "Get help with GNOME"
 msgstr "Potražite Gnomovu pomoć"
 
 #: ../yelp.desktop.in.in.h:3
-msgid "documentation;information;manual;"
-msgstr "dokumentacija;podaci;uputstvo;"
+#| msgid "documentation;information;manual;"
+msgid "documentation;information;manual;help;"
+msgstr "dokumentacija;podaci;uputstvo;pomoć;"
 
 #~ msgid "See all search results for “%s”"
 #~ msgstr "Pogledaj sve rezultate pretrage za „%s“"
