Updated Danish translation

--- a/po/da.po
+++ b/po/da.po
@@ -1,11 +1,11 @@
 # Danish translation of Yelp.
-# Copyright (C) 2002-2008
+# Copyright (C) 2002-2016
 # This file is distributed under the same license as the yelp package.
 #
 # Ole Laursen <olau@hardworking.dk>, 2002-2005.
 # Martin Willemoes Hansen <mwh@sysrq.dk>, 2004-2005.
 # Lasse Bang Mikkelsen <lbm@fatalerror.dk>, 2006.
-# Ask Hjorth Larsen <asklarsen@gmail.com>, 2007-2008.
+# Ask Hjorth Larsen <asklarsen@gmail.com>, 2007-2008, 2016.
 # Aputsiaq Niels Janussen <aj@isit.gl>, 2011.
 # Kenneth Nielsen <k.nielsen81@gmail.com>, 2014.
 #
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-21 02:40+0100\n"
-"PO-Revision-Date: 2016-03-21 02:39+0100\n"
+"POT-Creation-Date: 2016-09-12 02:14+0200\n"
+"PO-Revision-Date: 2016-09-08 02:49+0200\n"
 "Last-Translator: Kenneth Nielsen <k.nielsen81@gmail.com>\n"
 "Language-Team: Danish <dansk@dansk-gruppen.dk>\n"
 "Language: da\n"
@@ -491,8 +491,8 @@ msgid "Get help with GNOME"
 msgstr "Få hjælp til GNOME"
 
 #: ../yelp.desktop.in.in.h:3
-msgid "documentation;information;manual;"
-msgstr "dokumentation;information;manual;håndbog;"
+msgid "documentation;information;manual;help;"
+msgstr "dokumentation;information;manual;håndbog;hjælp;"
 
 #~ msgid "See all search results for “%s”"
 #~ msgstr "Vis alle søgeresultater for “%s”"
