Updated Ukrainian translation

--- a/po/uk.po
+++ b/po/uk.po
@@ -7,9 +7,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-04 14:58+0200\n"
-"PO-Revision-Date: 2016-03-04 14:58+0300\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=yelp&ke"
+"ywords=I18N+L10N&component=General\n"
+"POT-Creation-Date: 2016-08-19 16:59+0000\n"
+"PO-Revision-Date: 2016-09-17 16:03+0300\n"
 "Last-Translator: Daniel Korostil <ted.korostiled@gmail.com>\n"
 "Language-Team: linux.org.ua\n"
 "Language: uk\n"
@@ -483,8 +484,9 @@ msgid "Get help with GNOME"
 msgstr "Отримати довідку GNOME"
 
 #: ../yelp.desktop.in.in.h:3
-msgid "documentation;information;manual;"
-msgstr "документація;інформація;посібник;"
+#| msgid "documentation;information;manual;"
+msgid "documentation;information;manual;help;"
+msgstr "документація;інформація;посібник;довідка;"
 
 #~ msgid "See all search results for “%s”"
 #~ msgstr "Переглянути результати пошуку «%s»"
