Update NEWS for 3.22.0 release

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,39 @@
+3.22.0
+======
+* Add 'help' to list of desktop file keywords, #764322 (David King)
+* Updated translations:
+  cs    (Marek Černocký)
+  da    (Ask Hjorth Larsen)
+  de    (Mario Blättermann)
+  el    (Tom Tryfonidis)
+  en_GB (David King)
+  es    (Daniel Mustieles)
+  fa    (Arash Mousavi)
+  fi    (Jiri Grönroos)
+  fur   (Fabio Tomat)
+  fr    (Alexandre Franke)
+  gd    (GunChleoc)
+  gl    (Fran Dieguez)
+  he    (Yosef Or Boczko)
+  hu    (Balázs Úr)
+  id    (Andika Triwidada)
+  kk    (Baurzhan Muftakhidinov)
+  ko    (Seong-ho Cho)
+  lv    (Rūdolfs Mazurs)
+  pl    (Piotr Drąg)
+  pt    (Tiago Santos)
+  pt_BR (Rafael Ferreira)
+  sk    (Dušan Kazik)
+  sl    (Matej Urbančič)
+  sr    (Мирослав Николић)
+  sv    (Anders Jonsson)
+  uk    (Daniel Korostil)
+  vi    (Trần Ngọc Quân)
+
 3.21.3
 ======
 
-* Build system improvements (Michael Catanzaro, Sam Spilsbury, Emmaneuele
+* Build system improvements (Michael Catanzaro, Sam Spilsbury, Emmanuele
   Bassi)
 * Compiler warning fix (Cosimo Cecchi)
 * Updated translations:
