Update NEWS for 3.25.3 release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+3.25.3
+======
+* Fix loading uncompressed info pages, #775603 (Ting-Wei Lan)
+* Fix the search box border, #777809 (Trinh Anh Ngoc)
+* Fix showing the print dialog, #778256 (Christian Hergert)
+* Improvement to async page load handling, #778258 (Christian Hergert)
+* Fix a memory leak (David King)
+* Updated translations:
+  be    (Ihar Hrachyshka)
+  da    (Ask Hjorth Larsen)
+  eu    (Inaki Larranaga Murgoitio)
+  fur   (Fabio Tomat)
+  hr    (gogo)
+  if    (Milo Casagrande)
+  is    (Sveinn í Felli)
+  nb    (Åka Sikrom)
+  nl    (hanniedu)
+  ru    (Stas Solovey)
+  sr    (Марко Костић)
+  zh_CN (YunQiang Su)
+  zh_TW (Chao-Hsiung Liao)
+
 3.22.0
 ======
 * Add 'help' to list of desktop file keywords, #764322 (David King)
