zh_TW: Fix keyword list which MUST end with a semicolon

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -484,7 +484,7 @@ msgstr "顯示 GNOME 說明文件"
 #: ../yelp.desktop.in.in.h:3
 #| msgid "documentation;information;manual;"
 msgid "documentation;information;manual;help;"
-msgstr "documentation;information;manual;help;文件;資訊;手冊;求助;說明"
+msgstr "documentation;information;manual;help;文件;資訊;手冊;求助;說明;"
 
 #~ msgid "See all search results for “%s”"
 #~ msgstr "查看所有「%s」的搜尋結果"
