--- a/po/bg.po
+++ b/po/bg.po
@@ -1,8 +1,9 @@
 # Bulgarian translation of yelp po-file
 # Copyright (C) 2002, 2004, 2005, 2006 Free Software Foundation, Inc.
 # Copyright (C) 2007, 2008, 2009, 2011 Free Software Foundation, Inc.
-# Copyright (C) 2012, 2014, 2016 Free Software Foundation, Inc.
+# Copyright (C) 2012, 2014, 2016, 2017 Free Software Foundation, Inc.
 # Alexander Shopov <ash@kambanaria.org>, 2002, 2006, 2007, 2008, 2009, 2016.
+# Alexander Shopov <ash@kambanaria.org>, 2017.
 # Yanko Kaneti <yaneti@declera.com>, 2002.
 # Vladimir Petkov <vpetkov@i-space.org>, 2004, 2005, 2006.
 # Rostislav Raykov <zbrox@i-space.org>, 2006.
@@ -13,7 +14,7 @@ msgstr ""
 "Project-Id-Version: yelp master\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-09-03 09:48+0300\n"
-"PO-Revision-Date: 2017-09-03 09:48+0300\n"
+"PO-Revision-Date: 2017-09-03 09:54+0300\n"
 "Last-Translator: Alexander Shopov <ash@kambanaria.org>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "Language: bg\n"
