Update NEWS for 3.26.0 release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+3.26.0
+======
+* Require WebKitGTK+ 2.15.1, and use stable DOM API headers, #773551 (Michael
+  Catanzaro)
+* Don't translate properties, #757496 (Piotr Drąg)
+* Updated translations:
+  bg    (Alexander Shopov)
+  ca    (Jordi Mas)
+  da    (Ask Hjorth Larsen)
+  pl    (Piotr Drąg)
+  ro    (Daniel Șerbănescu)
+  tr    (Muhammet Kara)
+  zh_TW (Andre Klapper)
+
 3.25.3
 ======
 * Fix loading uncompressed info pages, #775603 (Ting-Wei Lan)
