--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+3.27.1
+======
+* Updates for new yelp-xsl stylesheets
+* Updated translations:
+  ca@valencia.po  (Xavi Ivars)
+  sk              (Dušan Kazik)
+  sl              (Matej Urbančič)
+
 3.26.0
 ======
 * Require WebKitGTK+ 2.15.1, and use stable DOM API headers, #773551 (Michael
