--- a/po/pl.po
+++ b/po/pl.po
@@ -1,5 +1,5 @@
 # Polish translation for yelp.
-# Copyright © 2002-2017 the yelp authors.
+# Copyright © 2002-2018 the yelp authors.
 # This file is distributed under the same license as the yelp package.
 # Zbigniew Chyla <chyla@alice.ci.pwr.wroc.pl>, 2002-2003.
 # Artur Flinta <aflinta@at.kernel.pl>, 2003-2004.
@@ -7,16 +7,16 @@
 # Marek Stępień <marcoos@aviary.pl>, 2006.
 # Tomasz Dominikowski <dominikowski@gmail.com>, 2007-2009.
 # Piotr Zaryk <pzaryk@aviary.pl>, 2008.
-# Piotr Drąg <piotrdrag@gmail.com>, 2011-2017.
+# Piotr Drąg <piotrdrag@gmail.com>, 2011-2018.
 # Paweł Żołnowski <pawel@zolnowski.name>, 2014.
-# Aviary.pl <community-poland@mozilla.org>, 2006-2017.
+# Aviary.pl <community-poland@mozilla.org>, 2006-2018.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-11 02:53+0100\n"
-"PO-Revision-Date: 2017-12-11 02:54+0100\n"
+"POT-Creation-Date: 2018-03-23 16:50+0100\n"
+"PO-Revision-Date: 2018-03-23 16:52+0100\n"
 "Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <community-poland@mozilla.org>\n"
 "Language: pl\n"
@@ -39,6 +39,42 @@ msgstr ""
 #: yelp.xml.in:36
 msgid "Install <string/>"
 msgstr "Zainstaluj „<string/>”"
+
+#: ../data/yelp.appdata.xml.in.h:1
+msgid "GNOME Help"
+msgstr "Pomoc GNOME"
+
+#: ../data/yelp.appdata.xml.in.h:2
+msgid "Help viewer for GNOME"
+msgstr "Przeglądarka pomocy dla GNOME"
+
+#: ../data/yelp.appdata.xml.in.h:3
+msgid ""
+"Yelp is the GNOME help viewer. It is the default Mallard viewer, but it can "
+"also display DocBook, info, man, and HTML documentation."
+msgstr ""
+"Yelp to przeglądarka pomocy GNOME. To domyślna przeglądarka formatu Mallard, "
+"ale może także wyświetlać dokumentację w formatach DocBook, info, man i HTML."
+
+#: ../data/yelp.appdata.xml.in.h:4
+msgid ""
+"It makes it easy to find the documentation you need, with interactive search "
+"and bookmarks."
+msgstr ""
+"Ułatwia znajdowanie potrzebnej dokumentacji za pomocą interaktywnego "
+"wyszukiwania i zakładek."
+
+#: ../data/yelp.appdata.xml.in.h:5
+msgid ""
+"It also has an editor mode, which shows editorial comments and revision "
+"statuses when editing Mallard documents."
+msgstr ""
+"Ma także tryb redaktora, który wyświetla komentarze redakcyjne i stany "
+"wersji podczas redagowania dokumentów w formacie Mallard."
+
+#: ../data/yelp.appdata.xml.in.h:6
+msgid "The GNOME Project"
+msgstr "Projekt GNOME"
 
 #: ../libyelp/yelp-bz2-decompressor.c:143
 #: ../libyelp/yelp-lzma-decompressor.c:152
@@ -345,4 +381,4 @@ msgstr "Pomoc GNOME"
 msgid "documentation;information;manual;help;"
 msgstr ""
 "dokumentacja;informacje;podręcznik;przewodnik;manual;instrukcja;pomoc;"
-"wsparcie;"
+"wsparcie;support;"
