--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+3.28.1
+======
+* Add AppData file (Daniel Mustieles, Kalev Lember, David King, Jeremy Bicha)
+* Updated translations:
+  cs    (Marek Černocký)
+  de    (Christian Kirbach)
+  es    (Daniel Mustieles)
+  fi    (Jiri Grönroos)
+  gl    (Fran Dieguez)
+  hr    (gogo)
+  id    (Andika Triwidada)
+  it    (Milo Casagrande)
+  lt    (Aurimas Černius)
+  lv    (Rūdolfs Mazurs)
+  nl    (Justin van Steijn)
+  pl    (Piotr Drąg)
+  pt_BR (Rafael Fontenelle)
+  ro    (Daniel Șerbănescu)
+  ru    (Stas Solovey)
+  sl    (Matej Urbančič)
+  sr    (Марко Костић)
+  sv    (Anders Jonsson)
+  zh_TW (Cheng-Chia Tseng)
+
 3.28.0
 ======
 * Require WebKitGTK+ 2.19.2, and rely on WebKit automatically updating font
