Fixed typo in Czech translation

--- a/po/cs.po
+++ b/po/cs.po
@@ -70,7 +70,7 @@ msgid ""
 "It also has an editor mode, which shows editorial comments and revision "
 "statuses when editing Mallard documents."
 msgstr ""
-"Má také reakční režim, který zobrazuje redakční komentáře a stav revizí při "
+"Má také redakční režim, který zobrazuje redakční komentáře a stav revizí při "
 "úpravách dokumentů Mallard."
 
 #: ../data/yelp.appdata.xml.in.h:6
