--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+3.30.0
+======
+* Fixed build with GCC 8 (Michael Catanzaro)
+* Updated translations:
+  cs    (Marek Cernocky)
+  da    (Ask Hjorth Larsen)
+  el    (Efstathios Iosifidis)
+  fr    (Guillaume Bernard)
+  fur   (Fabio Tomat)
+  hu    (Gábor Kelemen)
+  is    (Sveinn í Felli)
+  ko    (Seong-ho Cho)
+  tr    (Emin Tufan Çetin)
+  zh_CN (Mingcong Bai)
+
 3.28.1
 ======
 * Add AppData file (Daniel Mustieles, Kalev Lember, David King, Jeremy Bicha)
