--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+3.31.90
+=======
+* Fix issues when running in a sandbox (Matthias Clasen)
+* Various code cleanups (Tomas Popela)
+* Stop using GNOME app menu (Jeremy Bicha)
+* Support for keywords in search results for Mallard and DocBook (Shaun McCance)
+* Update app icon (Jakub Steiner)
+* Move from intltool to gettext (Krzesimir Nowak)
+* Updated translations:
+  es    (Daniel Mustieles)
+  fur   (Fabio Tomat)
+  gl    (Fran Dieguez)
+  hu    (Balázs Úr)
+  id    (Kukuh Syafaat)
+  ja    (Ryuta Fujii)
+  ml    (Anish Sheela)
+  nb    (Kjartan Maraas)
+  pl    (Piotr Drąg)
+  ro    (Daniel Șerbănescu)
+  sl    (Matej Urbančič)
+  sv    (Anders Jonsson)
+
 3.30.0
 ======
 * Fixed build with GCC 8 (Michael Catanzaro)
