--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,25 @@
+3.32.0
+======
+* Updated translations:
+  ca    (Jordi Mas)
+  cs    (Marek Cernocky)
+  da    (Alan Mortensen)
+  de    (Tim Sabsch)
+  el    (Efstathios Iosifidis)
+  fi    (Jiri Grönroos)
+  fr    (Claude Paroz, Charles Monzat)
+  it    (Milo Casagrande)
+  ko    (Seong-ho Cho)
+  lt    (Aurimas Černius)
+  lv    (Rūdolfs Mazurs)
+  nl    (Nathan Follens)
+  pt_BR (Rafael Fontenelle)
+  ru    (Stas Solovey)
+  sr    (Марко Костић)
+  tr    (Serdar Sağlam)
+  vi    (Trần Ngọc Quân)
+  zh_TW (Yi-Jyun Pan)
+
 3.31.90
 =======
 * Fix issues when running in a sandbox (Matthias Clasen)
