--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.32.1
+======
+* Fixed memory leaks (Umang Jain)
+* Updated translations:
+  da    (Ask Hjorth Larsen)
+  hr    (Goran Vidović)
+
 3.32.0
 ======
 * Updated translations:
