--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+3.33.92
+=======
+* Allow the application name to be translated (liujing)
+* Enable WebKit back-forward swipe gesture (Alexander Mikhaylenko)
+* Updated translations:
+  eu    (Asier Sarasua Garmendia)
+  fa    (Danial Behzadi)
+  tg    (Victor Ibragimov)
+  zh_CN (Dz Chen)
+
 3.32.2
 ======
 * Updated translations:
