--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+3.34.0
+======
+* Stable release. No changes since 3.33.92
+
 3.33.92
 =======
 * Allow the application name to be translated (liujing)
