--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.36.0
+======
+* Updated translations:
+  en_GB (Zander Brown)
+  gl    (Fran Dieguez)
+  ms    (Umarzuki Bin Mochlis Moktar)
+
 3.34.0
 ======
 * Stable release. No changes since 3.33.92
