--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+3.37.90
+=======
+* Updated translations:
+  ckb   (Jwtiyar Nariman)
+  id    (Kukuh Syafaat)
+  kk    (Baurzhan Muftakhidinov)
+  sk    (Peter Mráz)
+  uk    (Daniel Korostil)
+
 3.36.0
 ======
 * Updated translations:
