--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+3.38.0
+======
+* Updated translations:
+  es    (Daniel Mustieles)
+  ja    (Yuki Okushi)
+  pt_BR (Juliano Camargo)
+
 3.37.90
 =======
 * Updated translations:
