--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,14 @@
-3.37.90
-=======
+3.36.1
+======
+* Fix issue when opening local HTML files (#158)
 * Updated translations:
   ckb   (Jwtiyar Nariman)
+  es    (Daniel Mustieles)
+  he    (Yosef Or Boczko)
   id    (Kukuh Syafaat)
+  ja    (Yuki Okushi)
   kk    (Baurzhan Muftakhidinov)
+  pt    (Juliano Camargo)
   sk    (Peter Mráz)
   uk    (Daniel Korostil)
 
