--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+3.38.1
+======
+* Fix issue when opening local HTML files (#158)
+* Updated translations:
+  he    (Yosef Or Boczko)
+
 3.38.0
 ======
 * Updated translations:
