--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+3.38.2
+======
+* Fix crash when reloading local document (Michael Catanzaro)
+
 3.38.1
 ======
 * Fix issue when opening local HTML files (#158)
