Update Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -226,7 +226,7 @@ msgstr "Error desconegut."
 #: libyelp/yelp-view.c:975
 msgid "You do not have PackageKit. Package install links require PackageKit."
 msgstr ""
-"No teniu el PackageKit instal·lat. Cal tenir el PackageKit per utilitzar els "
+"No teniu el PackageKit instal·lat. Cal tenir el PackageKit per a utilitzar els "
 "enllaços d'instal·lació de paquets."
 
 #: libyelp/yelp-view.c:1222
