--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+3.38.3
+======
+* Updated translations:
+  be    (Źmicier Turok)
+
 3.38.2
 ======
 * Fix crash when reloading local document (Michael Catanzaro)
