--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+40.beta
+=======
+* Fix crashes from setting automatic IDs in DocBook 5 documents (Shaun McCance)
+* Fix links to search results for ghelp documents (#137) (Shaun McCance)
+* Fix crash when reloading Mallard document (Michael Catanzaro)
+* Handle mouse back/forward buttons (Paul Hebble)
+* Updated translations:
+  be    (Źmicier Turok)
+  ca    (Jordi Mas)
+
 3.38.1
 ======
 * Fix issue when opening local HTML files (#158)
