--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+40.rc
+=====
+* Updated translations:
+  gl    (Fran Dieguez)
+  pa    (A S Alam)
+
 40.beta
 =======
 * Fix crashes from setting automatic IDs in DocBook 5 documents (Shaun McCance)
