Replace Bugzilla with GitLab

--- a/README
+++ b/README
@@ -13,10 +13,9 @@ development in GNOME:
 
   https://gitlab.gnome.org/GNOME/yelp/
 
-Bugs are tracking in GNOME Bugzilla, product yelp:
+Bugs are tracking in the GNOME issue tracker, product yelp:
 
-  https://bugzilla.gnome.org/page.cgi?id=browse.html&product=yelp
-  https://bugzilla.gnome.org/enter_bug.cgi?product=yelp
+  https://gitlab.gnome.org/GNOME/yelp/-/issues/
 
 Yelp is distributed under the GNU General Public License, version 2
 or later. See the COPYING file for details.
