--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+41.beta
+=======
+* Revamped a lot of color code to avoid deprecated Gtk API (Shaun McCance)
+* Search results and 'All Help' now use current styling (Shaun McCance)
+* Fixed aliasing on the icon (Jakub Steiner)
+* Build against webkit2gtk-4.1 by default (Javier Jardón)
+* Removed calls to deprecated Soup API (Carlos Garcia Campos)
+* Updated translations:
+  oc    (Quentin PAGÈS)
+
 40.2
 ====
 * Updated translations:
